overflow post fixed

--- a/web/static/css/center.css
+++ b/web/static/css/center.css
@@ -61,12 +61,11 @@
 #title {
         color: white;
         font-family: 'Impact', 'Haettenschweiler', 'Arial Narrow Bold', sans-serif;
-        font-size: 15px; /* Adjust the value as per your need */
+        font-size: 15px;
         font-weight: 900;
-        /* Text wrapping */
-        overflow: hidden;
-        text-overflow:clip;
-        white-space: nowrap;
+        width: 100%;
+        height: max-content;
+        overflow-wrap: break-word;
 }
 
 #imgcontainer img {
@@ -83,6 +82,8 @@
     font-weight: 300;
     font-size: 15px;
     width: 100%;
+    height: max-content;
+    overflow-wrap: break-word;
 }
 
 #categories {
